--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wdth,wght@108.4,399&display=swap');
 html{
     width: 100%;
     height: 100%;
     display: block;
+    font-family: fredoka, sans-serif;
+    color: yellowgreen;
 }
 body{
     width: 100%;
@@ -28,7 +31,10 @@ body{
     height: 20%;
 }
 #dice-section{
-    height: 60%;
+    height: 40%;
+}
+#command{
+    height: 20%;
 }
 #scores{
     height:20%;
