--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,13 +19,21 @@ body{
     width: 75%;
     height: 75%;
     background-image: linear-gradient(to bottom right, #4a4a4a, #2a2a2a);
+    background-repeat: no-repeat;
     border-radius: 5px;
     filter: drop-shadow(0 0 10px lightgrey);
+    overflow: hidden;
 }
 #game-area table{
     width: 100%;
     height: 100%;
     text-align: center;
+}
+.dice{
+    max-width: 70%;
+    max-height: 70%;
+    min-width: 110px;
+    min-height: 110px;
 }
 #title{
     height: 20%;
