--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,9 @@ body{
     height: 100%;
     text-align: center;
 }
+h1{
+    font-size: 2.5em;
+}
 .dice{
     max-width: 70%;
     max-height: 70%;
@@ -46,4 +49,9 @@ body{
 }
 #scores{
     height:20%;
+}
+@media only screen and (max-width: 600px) {
+    h1{
+        font-size: 2em;
+    }
 }
