--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,9 +29,6 @@ body{
     height: 100%;
     text-align: center;
 }
-h1{
-    font-size: 2.5em;
-}
 .dice{
     max-width: 70%;
     max-height: 70%;
@@ -40,9 +37,21 @@ h1{
 }
 #title{
     height: 20%;
+    font-size: 1.5em;
+}
+#title h1{
+    margin-bottom: 0;
+}
+#sub-title{
+    height: 5%;
+    font-size: 1em;
+    line-height: -75px;
+}
+#sub-title h2{
+    margin-top:0;
 }
 #dice-section{
-    height: 40%;
+    height: 30%;
 }
 #command{
     height: 20%;
