add styling to the clicked and unclicked buttons using js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,9 +72,8 @@ body{
     top: 50%;
     border-radius: 10px 10px 0 0;
 }
-#tab-3{
-    background-color: red;
-    border-radius: 10px;
+#tabs tr td{
+    border-radius: 10px 10px 0 0;
 }
 td button{
     background-color:initial;
